[package]
name = "generals"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.30.0"
cxx = "1.0.146"
generals-sys = { path = "generals-sys" }

[build-dependencies]
autocxx-build = "0.30.0"
miette = { version = "5.10.0", features = ["fancy"] }
glob = "0.3.2"
cc = { version = "1.2", features = ["parallel"] }

[profile.dev]
opt-level = 1
debug = false

[profile.dev.package."*"]
opt-level = 3
