[workspace]
resolver = "2"

[package]
name = "generals"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.30.0"
cxx = "1.0.146"
mock-windows = { path = "mock-windows"}

[build-dependencies]
autocxx-build = "0.30.0"
miette = { version = "5.10.0", features = ["fancy"] }
cc = { version = "1.2", features = ["parallel"] }
cmake = "0.1.54"

[profile.dev]
opt-level = 1
debug = false

[profile.dev.package."*"]
opt-level = 3
