[workspace]
resolver = "3"
members = [
    "generals",
    "mock-windows",
]
default-members = [
    "generals",
]

[workspace.package]
rust-version = "1.85.0"
edition = "2024"

[workspace.dependencies]
log = "0.4.26"
mock-windows = { path = "mock-windows" }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
