[package]
name = "generals"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.30.0"
cxx = "1.0.146"
log = { workspace = true }
mock-windows = { workspace = true }
env_logger = "0.11.7"
glob = "0.3.2"

[build-dependencies]
autocxx-build = "0.30.0"
miette = { version = "5.10.0", features = ["fancy"] }
cc = { version = "1.2", features = ["parallel"] }
cmake = "0.1.54"
